adding reactive form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
       </div>
       <div id="wrapper">
           <div id="sidebar">
-                <app-add-complex-product></app-add-complex-product>
+                <app-add-product-reactive [myTitle]="title" [myList]=""></app-add-product-reactive>
               
           </div>
           <div id="content-area">
